fix overflow lateral y navegador

--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,7 @@ html{
 }
 body{
 	width: 100%;
-	overflow-x: hidden;
+/*	overflow-x: hidden;*/
 	color: white;
 	min-height: 100vh;
 	background: #0c192c;
@@ -31,24 +31,24 @@ h4{
 	color: white;
 }
 .container{
-	position: relative;
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 2em;
 }
-#content{
-}
+
 .bubbles{
 	position: relative;
 	display: flex;
 }
 .bubbles span{
+			z-index: -1;
+
 	position: relative;
 	padding: 0.5em;
 	background: #4fc3dc;
-	margin: 0 calc(100vh / 6);
+	margin: 0 calc(50vh / 6);
 	border-radius: 50%;
 	box-shadow: 0 0 0 1em #4fc3dc44,
 	0 0 3em #4fc3dc,
@@ -57,6 +57,7 @@ h4{
 	animation-duration: calc(125s / var(--i));
 }
 .bubbles span:nth-child(even){
+
 	background: #ff2d75;
 	box-shadow: 0 0 0 10px #ff2d7544,
 	0 0 3em #ff2d75,
@@ -75,14 +76,22 @@ nav{
 	background: #060415;
 	position: fixed;
 	top: 0;
+	right: 0;
 	display: flex;
+	flex-wrap: wrap;
+	gap: 2em;
+	justify-content: space-around;
 	width: 100%;
 	height: 7em;
 	font-size: 1rem;
 	padding: 1em;
+	padding-right: 4em;
 	box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.75)
 }
-
+#logo{
+	height: 5em;
+	width: auto;
+}
 .btnHeader{
 	height: 100%;
 	align-content: center;
@@ -114,8 +123,7 @@ nav{
 	display: flex;
 	justify-content: space-around;
 	align-content: center;
-	position: absolute;
-	right: 0;
+	
 }
 #logos{
 	margin: 1em;
@@ -123,18 +131,18 @@ nav{
 	height: auto;
 }
 #about{
-	margin-left: 2em;
 	width: 20%;
 	align-content: center;
 }
 ul{
 	list-style: none;
 }
+
 #hamburger{
 	display: none;
 	overflow: hidden;
 	position: fixed;
-	right: 1em;
+	right: 1.3em;
 	top: 3em;
 	height: 1em;
 	width: 6.5em;
@@ -147,10 +155,12 @@ ul{
 	height: 1em;
 	width: 1em;
 }
+.fa-bars:hover{
+	cursor: pointer;
+}
 #hamburger li{
 	padding: 0.3em;
 	background: #070707;
-/*	margin: 0.1em;*/
 }
 #hamburger li:hover{
 	background: #535152;
@@ -159,15 +169,14 @@ ul{
 #hamburger:hover {
 	background: #181516;
 	height: 6.5em;
+	cursor: pointer;
 }
-@media (max-width: 700px){
-	#about{
-		display:none;
-	}
-}
+
+
 @media (max-width: 1000px){
 	#hamburger{
 		display: flex;
+		margin-right: 1em;
 	}
 	.fa-bars{
 		display: flex;
@@ -183,11 +192,28 @@ ul{
 	#about{
 		width: 50%;
 	}
+	#cv{
+		width: 1.5em;
+		height: 1.5em;
+	}
+	#logo{
+		height: 4em;
+		margin-right: 1.7em;
+	}
+}
+@media (max-width: 700px){
+	#about{
+		display:none;
+	}
+	#logo{
+		margin-right: 2.4em;
+	}
+
 }
 
 #content{
+	overflow: hidden;
 	width: 100%;
-	position: absolute;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -195,7 +221,7 @@ ul{
 }
 
 #about-me{
-	padding-top: 4em;
+	padding-top: 2em;
 	width: 65%;
 	height: 60vh;
 	display: flex;
@@ -229,10 +255,6 @@ ul{
 	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
 
 }
-/*.hability:hover{
-	transform: scale(1.1);
-
-}*/
 .hability-img{
 	width: 3em;
 	height: auto;
@@ -322,9 +344,9 @@ ul{
 #cv{
 	position: fixed;
 	top: 90%;
-	right: 2em;
-	width: 90%;
-	background: transparent;
+	right: 3%;
+/*	width: 90%;*/
+/*	background: transparent;*/
 	border: 1px solid white;
 	border-radius: 10%;
 	height: 3.5em;
@@ -336,6 +358,8 @@ ul{
 	background: #cce6ff;
 	color: black;
 	opacity: 0.5;
+	z-index: 2;
+	display: none;
 }
 #cv:hover{
 	cursor: pointer;
